small fix errors